@@ -22,6 +22,7 @@ ChangeLog
 [-] * Improve SMSD documentation.
 [-] * Translations improvements.
 [-] * Add ID for Nokia 7373.
+[-] * Do not try to use filesystem OBEX if IrMC access was forced.
     
 20090126 - 1.22.92
 
